--- a/CSS/style.css
+++ b/CSS/style.css
@@ -382,6 +382,7 @@ align-items: flex-start;
     width: 350px; 
     height: 45px; 
     padding: 10px;
+    border-radius: 5px;
 } 
 
 .botao{
@@ -391,7 +392,8 @@ align-items: flex-start;
     display: flex; 
     flex-direction: row; 
     justify-content: center; 
-    align-items: center; 
+    align-items: center;
+    border-radius: 5px;
     margin-bottom: 35px;
 }
 
